--- a/index.html
+++ b/index.html
@@ -449,6 +449,22 @@
         </div>
       </div>
     </section>
+
+    <section id="getstarted">
+      <div class="container">
+        <div class="row">
+          <div class="get__started--body">
+            <div class="get__started--body-description">
+              <h1 class="get__started--title">Developers all over the world are happily using Treact.</h1>
+              <div class="get__started--button-wrapper">
+                <button class="get__started--button">Get Started</button>
+                <button class="get__started--button get__started--button-special">Contact Us</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
   <script src="index.js"></script>
 </html>
