footer update(only responsive design left)

--- a/index.html
+++ b/index.html
@@ -465,6 +465,65 @@
         </div>
       </div>
     </section>
+
+    <section id="footer">
+          <div class="footer__links">
+              <ul class="footer__link--wrapper">
+                <li class="footer__link--title">Main</li>
+                <li><a class="footer__link" href="#">Blog</a></li>
+                <li><a class="footer__link" href="#">FAQs</a></li>
+                <li><a class="footer__link" href="#">Support</a></li>
+                <li><a class="footer__link" href="#">About Us</a></li>
+              </ul>
+              <ul class="footer__link--wrapper">
+                <li class="footer__link--title">Product</li>
+                <li><a class="footer__link" href="#">Log In</a></li>
+                <li><a class="footer__link" href="#">Personal</a></li>
+                <li><a class="footer__link" href="#">Business</a></li>
+                <li><a class="footer__link" href="#">Team</a></li>
+              </ul>
+              <ul class="footer__link--wrapper">
+                <li class="footer__link--title">Press</li>
+                <li><a class="footer__link" href="#">Logos</a></li>
+                <li><a class="footer__link" href="#">Events</a></li>
+                <li><a class="footer__link" href="#">Stories</a></li>
+                <li><a class="footer__link" href="#">Office</a></li>
+              </ul>
+              <ul class="footer__link--wrapper">
+                <li class="footer__link--title">Team</li>
+                <li><a class="footer__link" href="#">Career</a></li>
+                <li><a class="footer__link" href="#">Founders</a></li>
+                <li><a class="footer__link" href="#">Culture</a></li>
+                <li><a class="footer__link" href="#">Onboarding</a></li>
+              </ul>
+              <ul class="footer__link--wrapper">
+                <li class="footer__link--title">Legal</li>
+                <li><a class="footer__link" href="#">GDPR</a></li>
+                <li><a class="footer__link" href="#">Privacy Policy</a></li>
+                <li><a class="footer__link" href="#">Terms of Service</a></li>
+                <li><a class="footer__link" href="#">Disclaimer</a></li>
+              </ul>
+          </div>
+    </section>
+
+    <footer>
+      <div class="container">
+        <div class="row footer__row">
+          <ul class="footer__description">
+            <a class="footer__logo" href="#">
+              <img class="footer__logo--img" src="./assets/footerlogo.svg" alt="">
+              Treact Inc.
+            </a>
+            <p class="footer__copyright">© 2018 Treact Inc. All Rights Reserved.</p>
+            <div class="footer__nav--list">
+              <a class="footer__nav--link" href="#"><i class="fa fa-facebook"></i></a>
+              <a class="footer__nav--link" href="#"><i class="fa fa-twitter"></i></a>
+              <a class="footer__nav--link" href="#"><i class="fa fa-youtube"></i></a>
+            </div>
+          </ul>
+        </div>
+      </div>
+    </footer>
   </body>
   <script src="index.js"></script>
 </html>
