another responsive update(still not done) taking break

--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
                   </figure>
                   <div class="testimonial__person--wrapper">
                     <h2 class="testimonial__name">Adam Cuppy</h2>
-                    <p class="testimonial__founder">Founder EventsNYC</p>
+                    <p class="testimonial__founder">Founder, EventsNYC</p>
                   </div>
                   <i class="fas fa-arrow-left" onclick="carouselError()"></i>
                   <i class="fas fa-arrow-right" onclick="carouselError()"></i>
@@ -421,8 +421,8 @@
         <div class="row">
           <div class="faq__header">
             <h1 class="section__title">Faqs</h1>
-            <h2 class="section__subtitle">You have <span class="text--purple">Questions ?</span></h2>
-            <p class="section__subtitle--info">And we have got answers to all of them. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <h2 class="section__subtitle faq__subtitle">You have <span class="text--purple">Questions ?</span></h2>
+            <p class="section__subtitle--info faq__subtitle--info">And we have got answers to all of them. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
           </div>
           <div class="accordions">
             <div class="accordion">
